Move plugin fully to Java, update to newest grgit plugin (#35)
* Move plugin fully to Java, update to newest grgit plugin

* Fix tests