@@ -3,16 +3,15 @@ plugins {
     id 'maven-publish'
     id 'groovy'
     id 'java'
-    id "com.gradle.plugin-publish" version "0.12.0"
-    id 'edu.wpi.first.wpilib.versioning.WPILibVersioningPlugin' version '4.0.2'
+    id "com.gradle.plugin-publish" version "0.15.0"
 }
 
 
 dependencies {
-    compile 'org.ajoberstar.grgit:grgit-core:3.0.0'
-    testCompile 'junit:junit:4.12'
-    testCompile 'com.github.stefanbirkner:system-rules:1.19.0'
-    testCompile 'com.github.stefanbirkner:system-lambda:1.1.1'
+    implementation 'org.ajoberstar.grgit:grgit-core:5.0.0'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'com.github.stefanbirkner:system-rules:1.19.0'
+    testImplementation 'com.github.stefanbirkner:system-lambda:1.1.1'
 }
 
 repositories {
@@ -21,12 +20,7 @@ repositories {
     }
 }
 
-wpilibVersioning.buildServerMode = project.hasProperty('buildServer')
-wpilibVersioning.releaseMode = project.hasProperty('releaseMode')
-wpilibVersioning.useAllTags = true
-wpilibVersioning.version.finalizeValue()
-
-version = wpilibVersioning.version.get()
+version = '2023.0.0'
 group = 'edu.wpi.first.wpilib.versioning'
 
 pluginBundle {
@@ -52,6 +46,20 @@ gradlePlugin {
     }
 }
 
+tasks.withType(Test).configureEach {
+    jvmArgs(["--add-opens=java.base/java.lang=ALL-UNNAMED",
+             "--add-opens=java.base/java.util=ALL-UNNAMED"])
+}
+
+tasks.withType(Javadoc) {
+    options.addBooleanOption('Xdoclint:all,-missing', true)
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '-Xlint:unchecked'
+    options.deprecation = true
+}
+
 wrapper {
-    gradleVersion = '5.4.1'
+    gradleVersion = '7.5.1'
 }
